hphp/test/quick/hopt_sprop_accessibility.php.expectf

Fatal error: Invalid static property access: A::priv in %s on line 4
